# slambook2-remake

./: .gitignore  CMakeLists.txt  README.md
ch02/: CMakeLists.txt  helloSLAM.cpp
ch03/: CMakeLists.txt  coordinateTransform.cpp  eigenMatrix.cpp
ch04/: CMakeLists.txt
ch05/: CMakeLists.txt
ch05/imageBasics/: imageBasics.cpp
ch05/rgbd/: CMakeLists.txt  jointMap.cpp
ch05/stereo/: stereoVision.cpp
ch06/: ceresCurveFitting.cpp  g2oCurveFitting.cpp
ch07/: orb_self.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d2d.cpp  triangulation.cpp
ch08/: CMakeLists.txt  direct_method.cpp  optical_flow.cpp
ch09/: CMakeLists.txt  SnavelyReprojectionError.h  bundle_adjusment_g2o.cpp  bundle_adjustment_ceres.cpp  common.cpp  common.h  final.ply  initial.ply
ch10/: CMakeLists.txt  pose_graph_g2o_SE3.cpp  pose_graph_g2o_lie_algebra.cpp
ch11/: CMakeLists.txt  feature_training.cpp  gen_vocab_large.cpp  loop_closure.cpp
ch12/: CMakeLists.txt
ch12/dense_RGBD/: CMakeLists.txt  octomap_mapping.cpp  pointcloud_mapping.cpp  surfel_mapping.cpp
ch12/dense_mono/: CMakeLists.txt  dense_mapping.cpp
ch13/: CMakeLists.txt
ch13/app/: run_kitti_stereo.cpp
ch13/include/: visual_odometry.h
ch13/include/myslam/: algorithm.h  visual_odometry.h
ch13/src/: backend.cpp  backend.h  camera.cpp  camera.h  config.cpp  config.h  dataset.cpp  dataset.h  feature.cpp  feature.h  frame.h  frontend.cpp  frontend.h  g2o_types.h  map.cpp  map.h  map_point.cpp  map_point.h  mappoint.h  viewer.cpp  viewer.h  visual_odometry.cpp  visual_odometry_impl.cpp  visual_odometry_impl.h
ch2/: CMakeLists.txt  libHelloSLAM.cpp  libHelloSLAM.h
ch3/: CMakeLists.txt  eigenGeometry.cpp  plotTrajectory.cpp  visualizeGeometry.cpp
ch4/: trajectoryError.cpp  useSophus.cpp
ch5/imageBasics/: CMakeLists.txt  undistortedImage.cpp
ch5/stereo/: CMakeLists.txt
ch6/: CMakeLists.txt  gaussNewton.cpp
ch7/: CMakeLists.txt  orb_cv.cpp  pose_estimation_2d2d.cpp  pose_estimation_3d3d.cpp
