add_executable(optical_flow optical_flow.cpp)
target_include_directories(optical_flow PUBLIC ${OpenCV_INCLUDE_DIRS})
target_link_libraries(optical_flow ${OpenCV_LIBS} Eigen3::Eigen)

add_executable(direct_method direct_method.cpp)
target_include_directories(direct_method PUBLIC ${OpenCV_INCLUDE_DIRS})
target_link_libraries(direct_method ${OpenCV_LIBS} Eigen3::Eigen Sophus::Sophus  ${Pangolin_LIBRARIES})

file(COPY LK1.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY LK2.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY left.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY disparity.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY 000001.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY 000002.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY 000003.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY 000004.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
file(COPY 000005.png DESTINATION ${CMAKE_CURRENT_BINARY_DIR})